2007-10-05  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright info for LLNS.

2007-10-03  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Added openssl-devel, bzip2-devel, and zlib-devel
	  BuildRequires for mock builds.

2007-09-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Fixed bug with RH_SUBSYS referencing the init
	  script name instead of the executable daemon name.

	* src/etc/munge.init.in: Fixed bug with SERVICE_NAME not removing the
	  leading /[SK][0-9]+/, thereby causing the sysconfig file to be
	  ignored at boot (when referenced via "/etc/rc5.d/S40munge").

2007-04-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Fixed bug in install-data-local target that
	  caused installation of munge.sysconfig to be considered new if
	  munge.init had changed.

	* src/etc/Makefile.am: Changed munge.sysconfig install perms to 0644.

2007-02-05  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.8.

	* TODO: Updated.

	* HISTORY, META, NEWS: Updated for 0.5.8 release.

2007-02-03  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

	* src/munged/cipher.c (HAVE_LIBGCRYPT:_cipher_init): Fixed cast
	  causing stack corruption and overwriting 'algo' on amd64.

2006-12-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/cipher.c (_cipher_update): Fixed compiler warning that
	  initialization discards qualifiers from pointer target type.

2006-12-25  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS: Tweaked capitalization.

2006-12-23  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS: Tweaked wording of 0.5.7 release notes.

	* : Released 0.5.7.

	* HISTORY, META, NEWS: Updated for 0.5.7 release.

2006-12-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/crypto.c (crypto_fini, _openssl_thread_dynlock_destroy):
	  Changed pthread_mutex_destroy() error to be nonfatal.
	* src/munged/gids.c (gids_destroy): Changed pthread_mutex_destroy()
	  error to be nonfatal.
	* src/munged/work.c (work_fini): Changed pthread_cond_destroy() and