@@ -5,7 +5,7 @@
 ##
 # Pass additional command-line options to the daemon.
 ##
-# OPTIONS="--key-file /etc/munge/munge.key --num-threads 1"
+# DAEMON_ARGS="--key-file /etc/munge/munge.key --num-threads 1"
 
 ##
 # Adjust the scheduling priority of the daemon.
